unpackaged/main/default/objects/SFMC_AccessTokens__mdt/SFMC_AccessTokens__mdt.object-meta.xml
<CustomObject>
    <label>SFMC Access Tokens</label>
    <pluralLabel>SFMC Access Tokens</pluralLabel>
</CustomObject>