unpackaged/main/default/objects/SFMC_AccessTokens__mdt/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>