unpackaged/main/default/objects/SFMC_AccessTokens__mdt/fields/Expires_In__c.field-meta.xml
<CustomField>
    <fullName>Expires_In__c</fullName>
    <label>Expires In</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>