unpackaged/main/default/objects/SFMC_AccessTokens__mdt/listViews/all_fields.listView-meta.xml
<ListView>
    <fullName>all_fields</fullName>
    <columns>DeveloperName</columns>
    <columns>Access_Token__c</columns>
    <columns>Expires_At__c</columns>
    <columns>Expires_In__c</columns>
    <filterScope>Everything</filterScope>
    <label>all fields</label>
</ListView>